@@ -14,7 +14,7 @@
 <body>
 
 <div metal:fill-slot="prefs_configlet_content"
-     tal:define="controlPanel python:modules['Products.CMFCore.utils'].getToolByName(here, 'portal_controlpanel');
+     tal:define="controlPanel context/portal_controlpanel;
                  groups python:controlPanel.getGroups('site');
                  getIconFor nocall:context/plone_utils/getIconFor">
 
@@ -24,10 +24,10 @@
 
 
     <h1 class="documentFirstHeading"
-        i18n:translate="heading_control_panel">Site Setup</h1>
+        i18n:translate="heading_site_setup">Site Setup</h1>
 
-    <p class="documentDescription" i18n:translate="description_control_panel">
-      Configuration area for Plone and add-on Products.
+    <p class="documentDescription" i18n:translate="description_site_setup">
+      Configuration area for Plone and add-ons.
     </p>
 
     <div tal:define="mt context/portal_migration;
@@ -137,40 +137,38 @@
 
     <tal:versions define="mt here/portal_migration;
                           sys mt/coreVersions">
-        <h2 i18n:translate="heading_plone_version_overview">
-            Plone Version Overview
+        <h2 i18n:translate="heading_version_overview">
+            Version Overview
         </h2>
 
         <ul>
             <li>Plone <span tal:replace="mt/getInstanceVersion" /></li>
-            <li>CMF <span tal:replace="sys/CMF" /></li>
             <li>Zope <span tal:replace="sys/Zope" /></li>
             <li>Python <span tal:replace="sys/Python" /></li>
         </ul>
     </tal:versions>
-    
-    <tal:debugmode define="QI python:context.portal_url.getPortalObject().portal_quickinstaller">
+
+    <tal:debugmode define="QI context/portal_quickinstaller">
         <p tal:condition="not:QI/isDevelopmentMode" 
            class="discreet"
            i18n:translate="description_production_mode">
           You are running in "production mode". This is the preferred mode of
-          operation for a live Plone site, but means that some
-          configuration changes will not take effect until your server is
-          restarted or a product refreshed. If this is a development instance,
-          and you want to enable debug mode, stop the server, set 'debug-mode=on' 
-          in your buildout.cfg, re-run bin/buildout and then restart the server 
-          process.
+          operation for a live Plone site, but means that some configuration
+          changes will not take effect until your server is restarted. If this
+          is a development instance, and you want to enable debug mode, stop
+          the server, set 'debug-mode=on' in your buildout.cfg, re-run
+          bin/buildout and then restart the server process.
         </p>
 
         <p tal:condition="QI/isDevelopmentMode"
            class="discreet"
            i18n:translate="description_debug_mode">
-          Note: You are running in "debug mode". This mode is intended for
-          sites that are under development. This allows many configuration
-          changes to be immediately visible, but will make your site
-          run more slowly. To turn off debug mode, stop the server, set 
-          'debug-mode=off' in your buildout.cfg, re-run bin/buildout and then 
-          restart the server process.
+          You are running in "debug mode". This mode is intended for sites that
+          are under development. This allows many configuration changes to be
+          immediately visible, but will make your site run more slowly. To turn
+          off debug mode, stop the server, set 'debug-mode=off' in your
+          buildout.cfg, re-run bin/buildout and then restart the server
+          process.
         </p>
     </tal:debugmode>
 
